config/.emacs.d/emacs-backup/home/guo/AwareCore/PublicFilter/*Python*~
Python 3.6.3 |Anaconda custom (64-bit)| (default, Nov  3 2017, 19:19:16) 
[GCC 7.2.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> python.el: native completion setup loaded
>>> import test
>>> test.bm
array([[ 0.11611743,  0.11611743,  0.11428609,  0.11428609,  0.1125911 ,
         0.1125911 ,  0.11105191,  0.11105191,  0.10968321,  0.10968321,
         0.10849582,  0.10849582,  0.10749754,  0.10749754,  0.10669383,
         0.10669383,  0.10608837,  0.10608837,  0.10568357,  0.10568357,
         0.10548084,  0.10548084],
       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,
         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,
         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,
         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,
         0.        ,  0.        ],
       [-0.11611743, -0.11611743, -0.11428609, -0.11428609, -0.1125911 ,
        -0.1125911 , -0.11105191, -0.11105191, -0.10968321, -0.10968321,
        -0.10849582, -0.10849582, -0.10749754, -0.10749754, -0.10669383,
        -0.10669383, -0.10608837, -0.10608837, -0.10568357, -0.10568357,
        -0.10548084, -0.10548084]])
>>> test.am
array([[ 1.        ,  1.        ,  1.        ,  1.        ,  1.        ,
         1.        ,  1.        ,  1.        ,  1.        ,  1.        ,
         1.        ,  1.        ,  1.        ,  1.        ,  1.        ,
         1.        ,  1.        ,  1.        ,  1.        ,  1.        ,
         1.        ,  1.        ],
       [-1.75247619, -1.92746431, -1.71868999, -1.90494378, -1.69019955,
        -1.88211755, -1.66745987, -1.85892181, -1.65075178, -1.83531356,
        -1.64020077, -1.81129404, -1.63578138, -1.78693985, -1.76244227,
        -1.63730657, -1.73815024, -1.64440692, -1.71460471, -1.6565129 ,
        -1.69254394, -1.67286106],
       [ 0.97854519,  0.98857221,  0.93760472,  0.96607391,  0.90009103,
         0.94399849,  0.86680048,  0.92230876,  0.83836041,  0.90101442,
         0.81524579,  0.88019414,  0.79778413,  0.86002317,  0.84080458,
         0.78614495,  0.82299712,  0.78031437,  0.807226  ,  0.7800643 ,
         0.79425873,  0.78493551]])
>>> test.xm
array([[-2188593],
       [-2126083],
       [-2075868],
       [-2047336],
       [-2038417],
       [-2041154],
       [-2044449],
       [-2069091],
       [-2102157],
       [-2117118],
       [-2117138],
       [-2117840],
       [-2128591],
       [-2159165],
       [-2205037],
       [-2230955],
       [-2226916],
       [-2213123],
       [-2182460],
       [-2134354],
       [-2072780],
       [-2013651],
       [-1968875],
       [-1975543],
       [-2028212],
       [-2092475],
       [-2152574],
       [-2202599],
       [-2233765],
       [-2245193],
       [-2238458],
       [-2202583],
       [-2150155],
       [-2117904],
       [-2106125],
       [-2106930],
       [-2105903],
       [-2096195],
       [-2072149],
       [-2060576],
       [-2061126],
       [-2063165],
       [-2074536],
       [-2105181],
       [-2154406],
       [-2214533],
       [-2268656],
       [-2282880],
       [-2252299],
       [-2202488],
       [-2139379],
       [-2078304],
       [-2028266],
       [-1998985],
       [-1992813],
       [-2029698],
       [-2091213],
       [-2143753],
       [-2177364],
       [-2191255],
       [-2189473],
       [-2187826],
       [-2192709],
       [-2186551],
       [-2173344],
       [-2171665],
       [-2169595],
       [-2159196],
       [-2131863],
       [-2086450],
       [-2029727],
       [-2004613],
       [-2016256],
       [-2047884],
       [-2097848],
       [-2159291],
       [-2218166],
       [-2267300],
       [-2295433],
       [-2273661],
       [-2209830],
       [-2145860],
       [-2093210],
       [-2061203],
       [-2050025],
       [-2051879],
       [-2055895],
       [-2081940],
       [-2117435],
       [-2134160],
       [-2134312],
       [-2133600],
       [-2141773],
       [-2168860],
       [-2212161],
       [-2237061],
       [-2233696],
       [-2221188],
       [-2192909],
       [-2146759],
       [-2085961],
       [-2025912],
       [-1979030],
       [-1982692],
       [-2032993],
       [-2096149],
       [-2157062],
       [-2208256],
       [-2241596],
       [-2255069],
       [-2249263],
       [-2212008],
       [-2157339],
       [-2121655],
       [-2107252],
       [-2106905],
       [-2106607],
       [-2098436],
       [-2077036],
       [-2067651],
       [-2069194],
       [-2070566],
       [-2080041],
       [-2107418],
       [-2154049],
       [-2213030],
       [-2267700],
       [-2282972],
       [-2254655],
       [-2206835],
       [-2144476],
       [-2081889],
       [-2029613],
       [-1996944],
       [-1988218],
       [-2023831],
       [-2086011],
       [-2140009],
       [-2176610],
       [-2192731]], dtype=int32)
>>> reload(test)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'reload' is not defined
>>> import test
>>> test.a
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: module 'test' has no attribute 'a'
>>> from importlib
  File "<stdin>", line 1
    from importlib
                 ^
SyntaxError: invalid syntax
>>> import importlib
>>> importlib.reload("test")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/guo/anaconda3/lib/python3.6/importlib/__init__.py", line 139, in reload
    raise TypeError("reload() argument must be a module")
TypeError: reload() argument must be a module
>>> importlib.reload(test)
<module 'test' from '/home/guo/AwareCore/PublicFilter/test.py'>
>>> test.a
1
>>> b = test.bm
>>> b
array([[ 0.11611743,  0.11611743,  0.11428609,  0.11428609,  0.1125911 ,
         0.1125911 ,  0.11105191,  0.11105191,  0.10968321,  0.10968321,
         0.10849582,  0.10849582,  0.10749754,  0.10749754,  0.10669383,
         0.10669383,  0.10608837,  0.10608837,  0.10568357,  0.10568357,
         0.10548084,  0.10548084],
       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,
         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,
         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,
         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,
         0.        ,  0.        ],
       [-0.11611743, -0.11611743, -0.11428609, -0.11428609, -0.1125911 ,
        -0.1125911 , -0.11105191, -0.11105191, -0.10968321, -0.10968321,
        -0.10849582, -0.10849582, -0.10749754, -0.10749754, -0.10669383,
        -0.10669383, -0.10608837, -0.10608837, -0.10568357, -0.10568357,
        -0.10548084, -0.10548084]])
>>> b[:,1]
array([ 0.11611743,  0.        , -0.11611743])
>>>  b[:,0]
  File "<stdin>", line 1
    b[:,0]
    ^
IndentationError: unexpected indent
>>> b[:,1]
array([ 0.11611743,  0.        , -0.11611743])
>>> test.FloatVector(b)  C-c C-c
KeyboardInterrupt
>>> reload
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'reload' is not defined
>>> from importlib import reload
>>> reload(test)
<module 'test' from '/home/guo/AwareCore/PublicFilter/test.py'>
>>> test.bm
array([ 0.11611743,  0.        , -0.11611743])
>>> 